--- a/remix.init/package.json
+++ b/remix.init/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "dependencies": {
         "contentful-import": "^8.3.2",
-        "dotenv": "^16.0.1"
+        "dotenv": "^16.0.1",
+        "inquirer": "^8.0.0"
     }
 }
